examples/passing/semantics/addition.gm
$r1 = 1;
x = 2;
y = $r1 + x;
assert(y + 1 != x + 1);
