examples/failing/semantics/join_datarace.gm
x = 2;
$t = spawn {
  assert (x == 2);
  x = 3;
  assert (x == 3);
};
assert(x == 2);
x = 4;
assert(x == 4);
join $t;